<resources>
    <string name="intro_get_help_dict">Help \n dictionary \n available</string>
    <string name="intro_button">Next</string>
    <string name="intro_button_finish">Finish</string>
    <string name="intro_choose_langs">Choose languages!</string>
    <string name="intro_lang_know">You know:</string>
    <string name="intro_lang_learn">You learn:</string>
    <string name="intro_nearly_done">Nearly done!</string>
    <string name="intro_what_next">What to do next?</string>
    <string name="intro_enjoy">Enjoy!</string>
    <string name="intro_check_settings">Check out the settings!</string>
    <string name="intro_enable_notifications">Enable notifications!</string>
    <string name="intro_add_words">Add some words!</string>
    <string name="articles"></string>
    <string name="please_wait">Please wait…</string>
    <string name="add_words_frag_title">Add New Words</string>
    <string name="dictionary_frag_title">My Dictionary</string>
    <string name="learn_words_frag_title">Learn My Words</string>
    <string-array name="fragments_titles">
        <item>Add New Words</item>
        <item>My Dictionary</item>
        <item>Learn My Words</item>
    </string-array>
    <string name="edit_dialog_title">Editing…</string>
    <string name="add_word_hint">Input word in %s</string>
    <string name="add_translation_hint">Input translation in %s</string>
    <string name="add_words_frag_help_text_words">Possible words</string>
    <string name="add_words_frag_help_text_trans">Possible translations</string>
    <string name="search_word_hint">Start typing to search</string>
    <string name="learn_no_words">No words to display yet.</string>
    <string name="toast_notif_start_text">LearnIt notification timer started. \nThe notifications will appear in scheduled time.</string>
    <string name="toast_notif_stop_text">Notification timer stopped.</string>
    <string name="toast_db_exported">Dictionary was exported to \n%s</string>
    <string name="toast_db_imported">Dictionary was imported from \n%s</string>
    <string name="toast_db_import_error">Error occurred while importing</string>
    <string name="dialog_empty_title">Oops…</string>
    <string name="dialog_empty_text">One of the fields is empty. Please fill it.</string>
    <string name="dialog_format_title">Oops!</string>
    <string name="dialog_format_text">Wrong format.\n Format \"{article} {word}\" expected.</string>
    <string name="dialog_article_title">Oops!</string>
    <string name="dialog_article_text">Only articles \"der\",\"die\" and \"das\" are permitted.</string>
    <string name="dialog_button_ok">OK</string>
    <string name="dialog_button_update">Update</string>
    <string name="dialog_button_cancel">Cancel</string>
    <string name="dialog_button_save">Save</string>
    <string name="dialog_button_clear">Clear</string>
    <string name="dialog_update_to_help_dict_needed">There is a help dictionary available for current language pair. Do you want to use it?</string>
    <string name="dialog_update_to_help_dict_needed_title">Help Dictionary Update</string>
    <string name="notification_text">Please click to translate the word.</string>
    <string name="notification_group">Notification settings</string>
    <string name="main_group">Main settings</string>
    <string name="pref_reminder_freq">Reminder frequency</string>
    <string name="pref_language_to_learn">Language to learn</string>
    <string name="pref_language_you_know">Language you know</string>
    <string name="pref_time_to_start">Time to start notifications</string>
    <string name="pref_num_of_words">Number of words in session</string>
    <string name="pref_way_to_learn">Way to learn words</string>
    <string name="pref_notifications">Notifications</string>
    <string name="pref_direction_of_trans">Direction of translation</string>
    <string name="pref_notifications_enabled">Notifications Enabled</string>
    <string name="pref_notifications_disabled">Notifications Disabled</string>
    <string name="pref_use_online_dict">Online dictionary usage</string>
    <string name="pref_use_online_dict_enabled">Glosbe online dictionary will be used if no offline dictionary is found</string>
    <string name="pref_use_online_dict_disabled">Online dictionary will not be used</string>
    <string name="context_menu_edit">Edit</string>
    <string name="context_menu_back">Back</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_export">Export dictionary</string>
    <string name="menu_import">Import dictionary</string>
    <string name="menu_info">About</string>
    <string name="instr_go_to_settings">Settings</string>
    <string name="quick_instructions">Just click on the \"Settings\" button below and pick a language you want to learn
        there. Then just click the \"Back\" button and you are ready to jump right in.</string>
    <string name="quick_start">For a Quick Start</string>
    <string name="welcome">Welcome!</string>
    <string name="instructions_title">Version %s</string>
    <string name="instructions_method_title">Concept</string>
    <string name="instructions_method_text">        This app allows you to learn the words even if you think that you are just too lazy to do it. \n\n
        Once you have added new words to your dictionary, they start appearing as notifications,
        making it impossible for you to miss them.
        \n\n
        The click on a notification shows the word you would want to translate and some possible translations from which
        you have to pick a correct one. The key idea is that the notifications can only be closed by picking the correct translation of the word.
        \n\n
        This whole system makes you repeat the words you learn every day (at most), which ensures remembering the word,
        while putting nearly no effort in learning.\n
        Basically, the app takes away all your responsibility to learn 5 or 10 new words every day.</string>
    <string name="instructions_guess_trans_title">Guessing Translation</string>
    <string name="instructions_guess_trans_text">        The app partially relies on the offline dictionaries support. They are used only as a helper.
        \n\n
        That is - when you want to enter a new word via \"Add New Words\" screen, once you click on the "Translation"
        field you will get some possible translations, you may have wanted to use.
        \n\n
        This saves you time, you really don\'t want to spend on switching the keyboard layout from one language to the
        other.</string>
    <string name="instructions_dict_help_title">Information About Dictionaries</string>
    <string name="instructions_dict_help_text">        To use a helping dictionary you have to download it and put into your phone\'s memory.
        I provide packages that do it for you at least for some languages. \n
        If your language is still missing - contact me and we will try to solve the problem.
        \n\n
        However, if you want to do it manually:
        The dictionaries should be put to the sd card, into the folder \"LearnIt\"
        (you may want to click \"Export dictionary\" inside the app - this will create the folder automatically)
        If you have any ideas, I would love to hear them.\n\n
        The dictionaries should be put in the folder {language_from}-{language_to}. \n\n
        StarDict usually is distributed with 3 files *.ifo, *.idx, *.dict. They all have to have name \"dict\".\n\n
        So for German-English dict the path looks as follows:\n\n
        /SD_CARD/LearnIt/de-en/dict.ifo\n
        /SD_CARD/LearnIt/de-en/dict.idx\n
        /SD_CARD/LearnIt/de-en/dict.dict\n</string>
    <string name="instructions_edit_words_help_title">Editing Existing Words</string>
    <string name="instructions_edit_words_help_text">        While you are on \"My Dictionary\" screen, and you have some words from your dictionary showing in the list, you may
        long-click them and edit/delete them.</string>
    <string name="instructions_thank_you_title">Thank You!</string>
    <string name="instructions_thank_you_text">        While this application is just my hobby project it really means a lot for me, that people use it.
        If you have any feedback or suggestions, feel free to contact me and tell what you think. It is really very
        important for me.</string>
    <string name="crouton_word_saved">New word \"%1$s\" saved.</string>
    <string name="crouton_word_updated">New translation added to the word \"%1$s\".</string>
    <string name="crouton_word_already_present">Word \"%1$s\" is already in your dictionary.</string>
    <string name="crouton_word_deleted">Deleted \"%1$s\".</string>
    <string name="crouton_word_not_deleted">Error occurred while deleting word \"%1$s\".</string>
    <string name="crouton_back_pressed_once">Press back once again to leave. \nThis will cancel the task.</string>
    <string name="crouton_empty_input">One of the input fields is empty, please fill both.</string>
    <string name="dict_sql_title">Help dictionary</string>
    <string name="dict_sql_no_dict">No help dictionary found current language pair.</string>
    <string name="dict_sql_success">Successfully loaded.</string>
    <string name="dict_sql_version">%1$s-%2$s. Version: %3$s</string>
    <string name="dict_sql_progress_found">Dictionary found. \nIndexing…</string>
    <string name="dict_sql_progress_searching_indexing">Searching and indexing dictionary…</string>
    <string name="dict_sql_may_close_now">You can now exit this screen.</string>
    <string-array name="time_entries">
        <item>Hour</item>
        <item>Two Hours</item>
        <item>Four Hours</item>
        <item>Half-day</item>
        <item>Day</item>
    </string-array>
    <string-array name="entries_languages_from">
        <item>German</item>
        <item>English</item>
        <item>Spanish</item>
        <item>French</item>
        <item>Italian</item>
        <item>Polish</item>
        <item>Russian</item>
        <item>Swedish</item>
        <item>Ukrainian</item>
    </string-array>
    <string-array name="add_words_language_hint">
        <item>German</item>
        <item>English</item>
        <item>Spanish</item>
        <item>French</item>
        <item>Italian</item>
        <item>Polish</item>
        <item>Russian</item>
        <item>Swedish</item>
        <item>Ukrainian</item>
    </string-array>
    <string-array name="entries_languages_to">
        <item>Auto</item>
        <item>German</item>
        <item>English</item>
        <item>Spanish</item>
        <item>French</item>
        <item>Italian</item>
        <item>Polish</item>
        <item>Russian</item>
        <item>Swedish</item>
        <item>Ukrainian</item>
    </string-array>
    <string-array name="entries_way_to_learn">
        <item>Translation only</item>
        <item>Articles only</item>
        <item>Mixed</item>
    </string-array>
    <string-array name="entries_direction_of_trans">
        <item>Show word</item>
        <item>Show translation</item>
        <item>Mixed</item>
    </string-array>
</resources>