<?xml version="1.0" encoding="utf-8"?>

<!--
  ~ Copyright (C) 2014  Igor Bogoslavskyi
  ~ This file is part of LearnIt.
  ~ This program is free software: you can redistribute it and/or modify
  ~ it under the terms of the GNU General Public License as published
  ~ the Free Software Foundation, either version 3 of the License, or
  ~ (at your option) any later version.
  ~
  ~ This program is distributed in the hope that it will be useful,
  ~ but WITHOUT ANY WARRANTY; without even the implied warranty of
  ~ MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
  ~ GNU General Public License for more details.
  ~
  ~ You should have received a copy of the GNU General Public License
  ~ along with this program.  If not, see <http://www.gnu.org/licenses/>.
  -->

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="match_parent"
                android:layout_height="match_parent">
    <TextView
        android:text="@string/instructions_title"
        android:id="@+id/instructions_title"
        style="@style/MyTextViewLarge"
        android:layout_alignParentLeft="true"/>

    <ScrollView
        style="@style/MyScrollView"
        android:layout_below="@id/instructions_title">
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <TextView
                android:text="@string/instructions_method_title"
                style="@style/MyTextView"/>
            <TextView
                android:text="@string/instructions_method_text"
                style="@style/MyTextViewSmall"/>
            <TextView
                android:text="@string/instructions_guess_trans_title"
                style="@style/MyTextView"/>
            <TextView
                android:text="@string/instructions_guess_trans_text"
                style="@style/MyTextViewSmall"/>
            <TextView
                android:text="@string/instructions_edit_words_help_title"
                style="@style/MyTextView"/>
            <TextView
                android:text="@string/instructions_edit_words_help_text"
                style="@style/MyTextViewSmall"/>
            <TextView
                android:text="@string/instructions_dict_help_title"
                style="@style/MyTextView"/>
            <TextView
                android:text="@string/instructions_dict_help_text"
                style="@style/MyTextViewSmall"/>
            <TextView
                android:text="@string/instructions_thank_you_title"
                style="@style/MyTextView"/>
            <TextView
                android:text="@string/instructions_thank_you_text"
                style="@style/MyTextViewSmall"/>
            <ImageView
                android:src="@drawable/logo_blue"
                android:contentDescription="@string/app_name"
                android:layout_gravity="center_horizontal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </LinearLayout>
    </ScrollView>
</RelativeLayout>