<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="20dp"
            android:text="@string/welcome"
            android:id="@+id/txt_welcome"
            android:layout_gravity="left|center_vertical"
            style="@android:style/TextAppearance.Holo.Large"
            android:textColor="@android:color/holo_blue_bright"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"/>

    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/quick_start"
            android:id="@+id/txt_quick_start"
            android:paddingLeft="20dp"
            android:layout_gravity="left|center_vertical"
            style="@android:style/TextAppearance.Holo.Medium"
            android:textColor="@android:color/holo_blue_bright"
            android:layout_alignParentLeft="true"
            android:layout_below="@id/txt_welcome"/>

    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/quick_instructions"
            android:paddingLeft="30dp"
            android:id="@+id/txt_quick_instructions"
            android:layout_gravity="left|center_vertical"
            style="@android:style/TextAppearance.Holo.Small"
            android:layout_alignLeft="@+id/txt_welcome"
            android:layout_below="@id/txt_quick_start"
            android:typeface="normal"
            android:textIsSelectable="false"/>

    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/instructions_title"
            android:id="@+id/instructions_title"
            android:paddingLeft="20dp"
            android:paddingBottom="5dp"
            android:layout_gravity="left|center_vertical"
            style="@android:style/TextAppearance.Holo.Medium"
            android:textColor="@android:color/holo_blue_bright"
            android:typeface="normal"
            android:layout_alignLeft="@+id/txt_welcome"
            android:layout_below="@id/txt_quick_instructions"/>


    <Button
            android:id="@+id/btn_go_to_settings"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/instr_go_to_settings"
            android:layout_gravity="center_horizontal|bottom"
            android:layout_centerHorizontal="true"
            android:layout_alignParentBottom="true"/>
    <ScrollView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/instructions_title"
            android:layout_above="@id/btn_go_to_settings"
            android:paddingLeft="30dp">
        <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical">
            <TextView
                    android:paddingLeft="10dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/instructions_method_title"
                    style="@android:style/TextAppearance.Holo.Small"
                    android:textAlignment="viewStart"
                    android:textColor="@android:color/holo_blue_dark"/>
            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/instructions_method_text"
                    android:textAlignment="viewStart"
                    style="@android:style/TextAppearance.Holo.Small"/>
            <TextView
                    android:paddingLeft="10dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/instructions_guess_trans_title"
                    style="@android:style/TextAppearance.Holo.Small"
                    android:textAlignment="viewStart"
                    android:textColor="@android:color/holo_blue_dark"/>
            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/instructions_guess_trans_text"
                    android:textAlignment="viewStart"
                    style="@android:style/TextAppearance.Holo.Small"/>

            <TextView
                    android:paddingLeft="10dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/instructions_edit_words_help_title"
                    style="@android:style/TextAppearance.Holo.Small"
                    android:textAlignment="viewStart"
                    android:textColor="@android:color/holo_blue_dark"/>
            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/instructions_edit_words_help_text"
                    android:textAlignment="viewStart"
                    style="@android:style/TextAppearance.Holo.Small"/>

            <TextView
                    android:paddingLeft="10dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/instructions_dict_help_title"
                    style="@android:style/TextAppearance.Holo.Small"
                    android:textAlignment="viewStart"
                    android:textColor="@android:color/holo_blue_dark"/>
            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/instructions_dict_help_text"
                    android:textAlignment="viewStart"
                    style="@android:style/TextAppearance.Holo.Small"/>

            <TextView
                    android:paddingLeft="10dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/instructions_thank_you_title"
                    style="@android:style/TextAppearance.Holo.Small"
                    android:textAlignment="viewStart"
                    android:textColor="@android:color/holo_blue_dark"/>
            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/instructions_thank_you_text"
                    android:textAlignment="viewStart"
                    style="@android:style/TextAppearance.Holo.Small"/>
        </LinearLayout>
    </ScrollView>
</RelativeLayout>