<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin">

    <TextView
        android:id="@+id/nearly_done"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="@style/MyTextViewLarge"
        android:text="@string/intro_nearly_done"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"/>

    <TextView
        android:id="@+id/things_next"
        android:layout_below="@id/nearly_done"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="@style/MyTextViewLarge"
        android:text="@string/intro_what_next"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="20dp"/>

    <TextView
        android:id="@+id/step2_caption"
        android:layout_below="@id/things_next"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="@style/MyTextView"
        android:text="@string/intro_add_words"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="40dp"
        android:layout_marginStart="40dp"/>

    <TextView
        android:id="@+id/step3_caption"
        android:layout_below="@id/step2_caption"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="@style/MyTextView"
        android:text="@string/intro_check_settings"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="40dp"
        android:layout_marginStart="40dp"/>

    <TextView
        android:id="@+id/step4_caption"
        android:layout_below="@id/step3_caption"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="@style/MyTextView"
        android:text="@string/intro_enable_notifications"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="40dp"
        android:layout_marginStart="40dp"/>

    <TextView
        android:id="@+id/enjoy"
        android:layout_below="@id/step4_caption"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="@style/MyTextView"
        android:text="@string/intro_enjoy"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="40dp"
        android:layout_marginStart="40dp"/>


</RelativeLayout>
