<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin">

    <TextView
        android:id="@+id/step1_caption"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="@style/MyTextViewLarge"
        android:text="@string/intro_choose_langs"
        android:gravity="center"
        android:layout_marginBottom="60dp"/>

    <LinearLayout
        android:layout_below="@id/step1_caption"
        android:id="@+id/text_spinner_learn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:layout_weight="1"
            android:layout_width="0dp"
            style="@style/MyTextView"
            android:text="@string/intro_lang_learn"
            android:layout_height="match_parent"/>
        <Spinner
            android:id="@+id/spinner_lang_learn"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:entries="@array/entries_languages_from"/>
    </LinearLayout>
    <LinearLayout
        android:id="@+id/text_spinner_know"
        android:layout_below="@+id/text_spinner_learn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp">
        <TextView
            android:layout_weight="1"
            android:layout_width="0dp"
            style="@style/MyTextView"
            android:text="@string/intro_lang_know"
            android:layout_height="match_parent"/>
        <Spinner
            android:id="@+id/spinner_lang_know"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:entries="@array/entries_languages_to"/>
    </LinearLayout>

</RelativeLayout>
